--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,11 +1,5 @@
 <app-nav></app-nav>
 
-<div class="container" style="margin-top: 100px;margin-left: 20px;">
-    <!-- <ul>
-        <li *ngfor="let user of users">{{user.id}} - {{user.username}}</li>
-    </ul> -->
-
-    <app-home></app-home>
+<div class="container" style="margin-top: 100px;">
+    <router-outlet></router-outlet>
 </div>
-
-
