--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,40 +1,39 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
-        <a class="navbar-brand" href="#"> {{ title }}</a>
+        <a class="navbar-brand" routerLink="/" routerLinkActive="active"> {{ title }}</a>
 
+        <!-- *ngIf="_accountservice.currentUser$ | async" -->
 
-        <ul class="navbar-nav mr-auto" *ngIf="_accountservice.currentUser$ | async">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Matches</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Lists</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Messages</a>
-            </li>
-            
+        <ul class="navbar-nav mr-auto">
+            <ng-container *ngIf="_accountservice.currentUser$ | async">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
+                </li>
+            </ng-container>
         </ul>
 
-        <div class="dropdown" *ngIf="_accountservice.currentUser$ | async" dropdown>
-            <a class="dropdown-toggle text-light" dropdownToggle>Welcome User</a>
-            <div class="dropdown-menu mt-3" *dropdownMenu> 
+        <div class="dropdown" *ngIf="(_accountservice.currentUser$ | async) as user" dropdown>
+            <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{ user.username | titlecase }}</a>
+            <div class="dropdown-menu mt-3" *dropdownMenu>
                 <a class="dropdown-item">Edit Profile</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item"(click)="logout()" >LogOut</a>
+                <a class="dropdown-item" (click)="logout()">LogOut</a>
             </div>
         </div>
-        
-        <form #loginForm="ngForm" *ngIf="(_accountservice.currentUser$ | async) === null" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()">
-            <input 
-                name="username"
-                [(ngModel)]="model.username"
-                class="form-control mr-sm-2" type="text" placeholder="Username">
-            <input 
-                name="password"
-                [(ngModel)]="model.password"
-                class="form-control mr-sm-2" type="Password" placeholder="Password">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+
+        <form #loginForm="ngForm" *ngIf="(_accountservice.currentUser$ | async) === null"
+            class="form-inline mt-2 mt-md-0" (ngSubmit)="login()">
+            <input name="username" [(ngModel)]="model.username" class="form-control mr-sm-2" type="text"
+                placeholder="Username">
+            <input name="password" [(ngModel)]="model.password" class="form-control mr-sm-2" type="Password"
+                placeholder="Password">
+            <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
         </form>
     </div>
 </nav>
